banner & size cheged

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Author URL: http://w3layouts.com
   </head>
   <body>
 <!--header-->
-<header id="site-header" class="fixed-top">
+<header id="site-header" class="fixed-top col-12">
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke px-0">
           <h1> <a class="navbar-brand" href="index.html">
@@ -99,7 +99,7 @@ Author URL: http://w3layouts.com
 </header>
 <!--/header-->
 <!-- banner section -->
-<section id="home" class="w3l-banner py-5">
+<section id="home" class="w3l-banner py-5 col-12">
     <div id="particles-js"></div>
     <div class="container py-lg-5 py-md-4">
         <div class="align-items-center py-4">
