--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ Author URL: http://w3layouts.com
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Astralution</title>
+    <title>Astralution -implementing new technology</title>
     <link rel="icon" href="assets/images/header-logo.png" type="image/gif" sizes="16x16">
 
     <!-- Google fonts -->
