--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Author URL: http://w3layouts.com
   </head>
   <body>
 <!--header-->
-<header id="site-header" class="fixed-top col-12">
+<header id="site-header" class="fixed-top">
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke px-0">
           <h1> <a class="navbar-brand" href="index.html">
@@ -99,12 +99,12 @@ Author URL: http://w3layouts.com
 </header>
 <!--/header-->
 <!-- banner section -->
-<section id="home" class="w3l-banner py-5 col-12">
+<section id="home" class="w3l-banner py-5">
     <div id="particles-js"></div>
     <div class="container py-lg-5 py-md-4">
         <div class="align-items-center py-4">
             <div class="banner-content mt-5">
-                <h1 class="pb-5 digital-headline col-12"><strong style = "font-family:georgia,garamond,serif;font-size:45px;font-style:italic;"> DIGITALISATION</strong></h1>
+                <h1 class="pb-5 digital-headline"><strong style = "font-family:georgia,garamond,serif;font-size:45px;font-style:italic;"> DIGITALISATION</strong></h1>
                 <h4 class="mb-2 banner-text"><span class="bold" style = "font-family:georgia,garamond,serif;font-size:35px;"> Groundbreaking technology with AI-powered analytics.</span></h4>
                 <h4 class="pt-3 banner-text">Frictionless visual communication <br> 
                     in real time between decision makers and assets in the field.
